Fixed player alignment

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ h6  {
 
 .fa-circle-play {
     font-size: 1.6rem;
-    margin: 0 15px;
+    margin: 0 5px;
 }
 
 .time {
@@ -167,11 +167,9 @@ h6  {
 }
 
 .progress-bar {
-    width: 70%;
+    width: 60%;
     background-color: #323232;
-    height: 2px;
     display: inline-block;
-    border: 2px solid #323232;
     border-radius: 10px;
 }
 
@@ -179,7 +177,7 @@ h6  {
     width: 25%;
     height: 2px;
     background-color: #ccc;
-    border: 2px solid #ccc;
+    border: 3px solid #ccc;
     border-radius: 10px;
 }
 /* COMMON */
@@ -223,6 +221,9 @@ nav ul {
 .wrap {
     flex-wrap: wrap;
     
+}
+.justify-end {
+    justify-content: end;
 }
 .justify-cen {
     justify-content: center;
